--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,6 @@ dependencies {
     compile 'net.simonvt.menudrawer:menudrawer:3.0.4@aar'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:18.0.+'
-    compile 'com.android.support:support-v4:18.0.+:sources'
+//    compile 'com.android.support:support-v4:18.0.+:sources'
 }
 
