--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -2,4 +2,4 @@ PACKAGE_NAME=com.github.snowdream.android.app.downloader
 POM_GROUP_ID=com.github.snowdream.android.app
 POM_ARTIFACT_ID=downloader
 POM_NAME=downloader
-POM_PACKAGING=jar
+POM_PACKAGING=aar
